# code_learn_be

./: a.py  alembic.ini  b.py  c.py  config.py  d.py  database.py  docker-compose.yml  pyproject.toml  requirements.txt  test.go  test.java
.VSCodeCounter/2024-12-22_08-10-12/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-12-22_08-12-24/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
app/: dependencies.py  main.py  models.py
app/alembic/: env.py
app/alembic/versions/: 2024_12_05_1002-c39941931188_update_table_user.py  2024_12_07_1450-0afc3443bb3a_update_table_lesson.py  2024_12_07_1548-29eb5abcb592_update_table_lesson.py  2024_12_17_1723-5dbda0eaa984_update.py  2024_12_21_0753-5c461a97aab6_update_table_lesson_course.py  2024_12_21_1223-7c11f88e089b_update_lessonprogess.py
app/core/: constants.py  security.py
app/routers/: auth.py  code_execution.py  courses.py  enrollments.py  lesson_progress.py  lessons.py  users.py
app/schemas/: course.py  enrollment.py  lesson.py  lesson_progress.py  quiz.py  user.py
code_runner/: Dockerfile  main.py
diagram/: test.md
